--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,23 @@
-# Project-wide Gradle settings.
-
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-
+## Project-wide Gradle settings.
+#
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
-
+#
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx10248m -XX:MaxPermSize=256m
 # org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-
+#
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+#Tue Mar 01 21:36:15 IST 2016
+systemProp.http.proxyPassword=putu1
+systemProp.https.proxyUser=iit2013122
+systemProp.https.proxyPort=8080
+systemProp.http.proxyHost=172.31.1.4
+systemProp.https.proxyPassword=putu1
+systemProp.https.proxyHost=172.31.1.4
+systemProp.http.proxyUser=iit2013122
+systemProp.http.proxyPort=8080
